<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <!-- Logo/Text at the top -->

    <!-- Sign in Label -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D3D3D3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/harmonizehr"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:text="@string/sign_in_using_company_account"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:backgroundTint="#999999"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#000000" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:backgroundTint="#999999"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="184dp"
            android:layout_height="75dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="#79B4F7"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/forgotPassBtn"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/reset_password"
            android:textColor="#DD2C00"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


